    * Do not use the generic IP address sort routines for AD DCs
      since the SRV lookup include a sorting algorithm based
      on priority and weight. 
    * Fix our DNS SRV lookup code to deal with multi-homed hosts.
    * More changes to ensure that the primary group SID for 
      a local user is based on the primary Unix group and not the
      primaryGroupSID passdb attribute.


o   Guenther Deschner <gd@samba.org>
    * Fix msdfs RPC client and server management RPCs.
    * Align idmap_ad with the current idmap_methods interface.


o   Volker Lendecke <vl@samba.org>
    * Re-add support for "username level" when looking up the 
      matching Unix user for an smbpasswd entry.
    * snprintf() fixes.


o   Simo Sorce <idra@samba.org>
    * Let innetgr() work without binding its use to a 
      NIS domain to support netgroups in local files.


o   Ben Winslow <rain@bluecherry.net>
    * Allow client smb signing to be turned off correctly.


Release Notes for older release follow:

      --------------------------------------------------
                   ===============================
                   Release Notes for Samba 3.0.23b
                             Aug 7, 2006
                   ===============================

Common bugs fixed in 3.0.23b include:

  o Ambiguity with unqualified names in smb.conf parameters
    such as "force user" and "valid users".
  o Errors in 'net ads join' caused by bad IP address in the list
    of domain controllers.
  o SMB signing errors in the client and server code.
  o Domain join failures when using smbpasswd on a Samba PDC.


Member servers, domain accounts, and smb.conf
=============================================

Since Samba 3.0.8, it has been recommended that all domain accounts 
listed in smb.conf on a member server be fully qualified with the 
domain name.  This is now a requirement.  All unqualified names are 
assumed to be local to the Unix host, either as part of the server's 